manifests/tools/manifests/argocd/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    istio.io/dataplane-mode: ambient
    shared-gateway-access: 'true'
