manifests/tools/manifests/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  hostnames:
  - argocd.matoru.ru
  parentRefs:
  - name: common
    namespace: kube-system
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
